5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1745_1521.log
== TEST (2019-05-15 14:17:44) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:02) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:05) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:35) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(soma)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:50) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:54) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:34) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:19:43) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- EXECUTION TIME:
1.08071
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
0
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:36) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<=7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:55) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<=7):
	soma = soma - qtd
	c = c +1
print(c)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:23:15) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0

qtd = q
while(n<=7):
	
	c = c +1
print(c)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:47) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:30:56) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n==7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:11) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- ERROR:
File "XXXX", line 7
    while(n=7):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:15) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- ERROR:
File "XXXX", line 7
    while(n=7):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:21) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n==7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- ERROR:
File "XXXX", line 7
    while(n=7):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:52) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c==7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- ERROR:
File "XXXX", line 7
    while(n=7):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:12) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:33) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:34:37) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- EXECUTION TIME:
1.13653
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
8
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
8
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:52) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:56) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:35:45) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n>=0 and n<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:36:10) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma - qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:36:31) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma - qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:40:16) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0

qtd = q
while(c>=0 and c<=7):
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:42:01) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + 1
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:42:48) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
q = 1
while(c>=0 and c<=7):
	soma = soma + q
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:41) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:09) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:08) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n>=0 and n<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:29) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:46) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = 1
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:51:02) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- EXECUTION TIME:
0.274791
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:

-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
Capacidade do navio: Estoque inicial de containers: quantidade de containers: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:03) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:51:03) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- EXECUTION TIME:
0.200206
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:

-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
Capacidade do navio: Estoque inicial de containers: quantidade de containers: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:03) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma - qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:03) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma - qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:51:07) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- EXECUTION TIME:
1.37421
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
8
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
8
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:51:08) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- EXECUTION TIME:
2.05404
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
8
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
8
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:09) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:09) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:09) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:09) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:52:02) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- EXECUTION TIME:
0.552279
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:

-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
Capacidade do navio: Estoque inicial de containers: quantidade de containers: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:52:02) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- EXECUTION TIME:
0.666437
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:

-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
Capacidade do navio: Estoque inicial de containers: quantidade de containers: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:53:02) 
-- CODE:
n = float(input("Capacidade do navio: "))
esti = float(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c +1
print(c)
	
-- EXECUTION TIME:
1.62984
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:

-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
Capacidade do navio: Estoque inicial de containers: quantidade de containers: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:25) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:55:01) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(n<7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- EXECUTION TIME:
1.22892
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:

-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
Capacidade do navio: Estoque inicial de containers: quantidade de containers: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:46) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:05) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:32:05) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
c=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	c = c+1
print(c)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:36) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
t=0
soma = 0
qtd = q
while(c>=0 and c<=7):
	soma = soma + qtd
	t = t+1
print(t)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(c>=0 and c<=7):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:52) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
t=0
soma = 0
qtd = q
while(t>=0 and t<=7):
	soma = soma + qtd
	t = t+1
print(t)
	
	
	
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:52:03) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
t=0
soma=7
qtd = q
while(t<n):
	soma = soma + qtd
	t = t+1
print(t)
	
	
	
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:52:15) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
t=0
soma=7
qtd = q
while(t<n):
	soma = soma + qtd
	t = t+1
print(t)
	
	
	
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:52:26) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
t=0
soma=7
qtd = q
while(t<n):
	soma = soma + qtd
	t = t+1
print(t)
	
	
	
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:52:59) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
t=0
soma=7
qtd = q
while(t<n):
	soma = soma + qtd
	t = t+1
print(t)
	
	
	
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:53:57) 
-- CODE:
n = int(input("Capacidade do navio: "))
esti = int(input("Estoque inicial de containers: "))
q = int(input("quantidade de containers: "))
t=0
soma=7
qtd = q
while(t<n):
	soma = soma - qtd
	t = t+1
print(t)
	
	
	
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
